...
        "unarmed":              "Waffenlos",
        "confirmation":         "Bestätigung",
        "tapToRoll":            "Antippen zum Würfeln",
        "modifier":             "Mod",
        "new":                  "Neu",
        "round.label":          "RUNDE",
        "lifePoints.label":     "LEBENSPUNKTE",
        "status.label":         "STATUS",
        "action.label":         "AKTION",
        "reaction.label":       "REAKTION",
        "fateAction.label":     "SCHICKSALSPUNKTE",
        "recordAction.label":   "EINTRAGEN",
        "unarmed.label":        "WAFFENLOS",
...
        "followUp.dodged":            "Der Gegner ist ausgewichen.",
        "calculation.label":    "BERECHNUNG",
        "additional.label":     "ZUSÄTZLICH",
        "source.basis":         "Basis",
        "source.weapon":        "Waffe",
        "source.belastung":     "Belastung",
        "source.schmerz":       "Schmerz",
        "source.finte":         "Finte",
        "source.vorstoss":      "Vorstoß",
        "source.sturmangriff":  "Sturmangriff zu Pferd",
        "source.sturmangriff.rk14":  "Sturmangriff zu Pferd: 2 + ½ GS %@ (%d)",
        "source.dualAttack":    "Beidhändig",
        "source.offHand":       "Nebenhand",
...
